--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -25,6 +25,14 @@ function getScore(price) {
       gtag('config', 'G-DHN4XB4R6G');
     </script>
 
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "utlp0yi5s1");
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Laptop Comparator - Encuentra tu Portátil Ideal</title>
     <meta name="description" content="Comparador de portátiles en España. Ofertas Gaming, Estudiantes y Ultrabooks. Análisis técnico sin marketing." />
